--- a/Src/Canvas/Canvas/Canvas.csproj
+++ b/Src/Canvas/Canvas/Canvas.csproj
@@ -81,16 +81,16 @@
       <HintPath>packages\Illumina.Common.1.40.1-O00002develop\lib\net451\Illumina.Common.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Isas.Framework, Version=3.1.0.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>packages\Isas.Framework.3.1.0\lib\net451\Isas.Framework.dll</HintPath>
+    <Reference Include="Isas.Framework, Version=3.3.1.15, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>packages\Isas.Framework.3.3.1-O00015develop\lib\net451\Isas.Framework.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Isas.Manifests.NexteraManifest, Version=2.0.0.0, Culture=neutral, processorArchitecture=AMD64">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>packages\Isas.Manifests.2.0.0\lib\net451\Isas.Manifests.NexteraManifest.dll</HintPath>
     </Reference>
-    <Reference Include="Isas.SequencingFiles, Version=3.3.3.59, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>packages\Isas.SequencingFiles.3.3.3-O00059develop\lib\net451\Isas.SequencingFiles.dll</HintPath>
+    <Reference Include="Isas.SequencingFiles, Version=3.5.0.63, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>packages\Isas.SequencingFiles.3.5.0-O00063develop\lib\net451\Isas.SequencingFiles.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="NDesk.Options, Version=0.2.1.0, Culture=neutral, processorArchitecture=MSIL">
@@ -190,12 +190,12 @@ if ERRORLEVEL 1 (
     exit /b 1
 )</PostBuildEvent>
   </PropertyGroup>
-  <Import Project="packages\Isas.FileCompression.3.3.3-O00059develop\build\net451\Isas.FileCompression.targets" Condition="Exists('packages\Isas.FileCompression.3.3.3-O00059develop\build\net451\Isas.FileCompression.targets')" />
+  <Import Project="packages\Isas.FileCompression.3.5.0-O00063develop\build\net451\Isas.FileCompression.targets" Condition="Exists('packages\Isas.FileCompression.3.5.0-O00063develop\build\net451\Isas.FileCompression.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
-    <Error Condition="!Exists('packages\Isas.FileCompression.3.3.3-O00059develop\build\net451\Isas.FileCompression.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\Isas.FileCompression.3.3.3-O00059develop\build\net451\Isas.FileCompression.targets'))" />
+    <Error Condition="!Exists('packages\Isas.FileCompression.3.5.0-O00063develop\build\net451\Isas.FileCompression.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\Isas.FileCompression.3.5.0-O00063develop\build\net451\Isas.FileCompression.targets'))" />
   </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
