--- a/Src/Canvas/CanvasSmooth/packages.config
+++ b/Src/Canvas/CanvasSmooth/packages.config
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Illumina.Common" version="1.40.1-O00002develop" targetFramework="net452" />
-  <package id="Isas.FileCompression" version="3.3.3-O00059develop" targetFramework="net452" />
-  <package id="Isas.Framework" version="3.1.0" targetFramework="net452" />
-  <package id="Isas.SequencingFiles" version="3.3.3-O00059develop" targetFramework="net452" />
+  <package id="Isas.FileCompression" version="3.5.0-O00063develop" targetFramework="net452" />
+  <package id="Isas.Framework" version="3.3.1-O00015develop" targetFramework="net452" />
+  <package id="Isas.SequencingFiles" version="3.5.0-O00063develop" targetFramework="net452" />
   <package id="NDesk.Options" version="0.2.1" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
   <package id="protobuf-net" version="2.1.0" targetFramework="net452" />
