--- a/Src/Canvas/CanvasTest/packages.config
+++ b/Src/Canvas/CanvasTest/packages.config
@@ -4,9 +4,9 @@
   <package id="AutoFixture.AutoNSubstitute" version="3.30.8" targetFramework="net451" />
   <package id="AutoFixture.Xunit2" version="3.30.8" targetFramework="net451" />
   <package id="Illumina.Common" version="1.40.1-O00002develop" targetFramework="net451" />
-  <package id="Isas.FileCompression" version="3.3.3-O00059develop" targetFramework="net451" />
-  <package id="Isas.Framework" version="3.1.0" targetFramework="net451" />
-  <package id="Isas.SequencingFiles" version="3.3.3-O00059develop" targetFramework="net451" />
+  <package id="Isas.FileCompression" version="3.5.0-O00063develop" targetFramework="net451" />
+  <package id="Isas.Framework" version="3.3.1-O00015develop" targetFramework="net451" />
+  <package id="Isas.SequencingFiles" version="3.5.0-O00063develop" targetFramework="net451" />
   <package id="NDesk.Options" version="0.2.1" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net451" />
   <package id="NSubstitute" version="1.8.2.0" targetFramework="net451" />
