--- a/Src/Canvas/Wrapper/packages.config
+++ b/Src/Canvas/Wrapper/packages.config
@@ -1,7 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Illumina.Common" version="1.19.6" targetFramework="net451" />
-  <package id="Isas.FileCompression" version="2.63.0" targetFramework="net451" />
-  <package id="Isas.SequencingFiles" version="2.63.0" targetFramework="net451" />
-  <package id="protobuf-net" version="2.0.0.668" targetFramework="net451" />
+  <package id="Illumina.Common" version="1.40.1-O00002develop" targetFramework="net451" />
+  <package id="Isas.FileCompression" version="3.5.0-O00063develop" targetFramework="net451" />
+  <package id="Isas.Framework" version="3.3.1-O00015develop" targetFramework="net451" />
+  <package id="Isas.Manifests" version="2.2.0" targetFramework="net451" />
+  <package id="Isas.Ploidy" version="0.1.0-O00004develop" targetFramework="net451" />
+  <package id="Isas.SequencingFiles" version="3.5.0-O00063develop" targetFramework="net451" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net451" />
+  <package id="protobuf-net" version="2.1.0" targetFramework="net451" />
 </packages>
