--- a/Src/Canvas/CanvasClean/packages.config
+++ b/Src/Canvas/CanvasClean/packages.config
@@ -3,6 +3,7 @@
   <package id="Illumina.Common" version="1.40.1-O00002develop" targetFramework="net451" />
   <package id="Isas.FileCompression" version="3.5.0-O00063develop" targetFramework="net451" />
   <package id="Isas.Framework" version="3.3.1-O00015develop" targetFramework="net451" />
+  <package id="Isas.Manifests" version="2.2.0" targetFramework="net451" />
   <package id="Isas.SequencingFiles" version="3.5.0-O00063develop" targetFramework="net451" />
   <package id="NDesk.Options" version="0.2.1" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net451" />
