--- a/Src/Canvas/Canvas/Canvas.nuspec
+++ b/Src/Canvas/Canvas/Canvas.nuspec
@@ -10,10 +10,12 @@
     <description>Canvas</description>
     <copyright>Copyright 2017</copyright>
     <tags>Canvas</tags>
-    <dependency id="Isas.Manifests" version="[2.2.0,3.0.0)" />
-    <dependency id="Isas.Ploidy" version="(0.0.0,1.0.0)" />
-    <dependency id="Isas.SequencingFiles" version="(3.4.0,4.0.0)" />
-    <dependency id="Isas.Framework" version="(3.3.0,4.0.0)" />
+    <dependencies>
+      <dependency id="Isas.Manifests" version="[2.2.0,3.0.0)" />
+      <dependency id="Isas.Ploidy" version="(0.0.0,1.0.0)" />
+      <dependency id="Isas.SequencingFiles" version="(3.4.0,4.0.0)" />
+      <dependency id="Isas.Framework" version="(3.3.0,4.0.0)" />
+    </dependencies>
   </metadata>
   <files>
     <file src="..\x64\Release\*" target="build/Canvas" />
