--- a/Src/Canvas/Canvas/Canvas.nuspec
+++ b/Src/Canvas/Canvas/Canvas.nuspec
@@ -20,7 +20,7 @@
   <files>
     <file src="..\x64\Release\*" target="build/Canvas" />
     <file src="Canvas.targets" target="build/Canvas.targets" />
-    <file src="..\Wrapper\x64\Release\Canvas.Wrapper.dll" target="lib\net451" />
-    <file src="..\Wrapper\x64\Release\Canvas.Wrapper.XML" target="lib\net451" />
+    <file src="..\Wrapper\bin\x64\Release\Canvas.Wrapper.dll" target="lib\net451" />
+    <file src="..\Wrapper\bin\x64\Release\Canvas.Wrapper.XML" target="lib\net451" />
   </files>
 </package>
