--- a/Src/Canvas/Canvas/NuGet.config
+++ b/Src/Canvas/Canvas/NuGet.config
@@ -7,7 +7,9 @@
     <add key="All" value="(Aggregate source)" />
   </activePackageSource>
   <packageSources>
+    <add key="Bioinfo (stable and develop branches)" value="https://ussd.artifactory.illumina.com/api/nuget/nuget-bioinformatics" />
+    <add key="Bioinfo Internal (feature and bugfix branches)" value="https://ussd.artifactory.illumina.com/api/nuget/nuget-bioinformatics-internal" />
+    <add key="Bioinfo TeamCity (older packages)" value="http://ussd-prd-tcbf01/guestAuth/app/nuget/v1/FeedService.svc/" />
     <add key="nuget.org" value="https://www.nuget.org/api/v2/" />
-    <add key="Bioinfo TeamCity" value="http://ussd-prd-tcbf01/guestAuth/app/nuget/v1/FeedService.svc/" />
   </packageSources>
 </configuration>
