--- a/Src/Canvas/Canvas/NuGet.config
+++ b/Src/Canvas/Canvas/NuGet.config
@@ -10,6 +10,6 @@
     <add key="Bioinfo (stable and develop branches)" value="https://ussd.artifactory.illumina.com/api/nuget/nuget-bioinformatics" />
     <add key="Bioinfo Internal (feature and bugfix branches)" value="https://ussd.artifactory.illumina.com/api/nuget/nuget-bioinformatics-internal" />
     <add key="Bioinfo TeamCity (older packages)" value="http://ussd-prd-tcbf01/guestAuth/app/nuget/v1/FeedService.svc/" />
-    <add key="nuget.org" value="https://www.nuget.org/api/v2/" />
+    <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
   </packageSources>
 </configuration>
