--- a/Src/Canvas/Wrapper/Wrapper.csproj
+++ b/Src/Canvas/Wrapper/Wrapper.csproj
@@ -89,10 +89,11 @@
     <Compile Include="CanvasEnrichmentOutput.cs" />
     <Compile Include="CanvasOutput.cs" />
     <Compile Include="CanvasPloidyBedCreator.cs" />
+    <Compile Include="CanvasPloidyVcfCreator.cs" />
     <Compile Include="CanvasResequencingCnvCaller.cs" />
     <Compile Include="CanvasResequencingInput.cs" />
     <Compile Include="CanvasSingleSampleInputCommandLineBuilder.cs" />
-    <Compile Include="CanvasSmallPedigreeCaller.cs" />
+    <Compile Include="CanvasSmallPedigreeWrapper.cs" />
     <Compile Include="CanvasSmallPedigreeInput.cs" />
     <Compile Include="CanvasSmallPedigreeOutput.cs" />
     <Compile Include="CanvasTumorNormalEnrichmentCnvCaller.cs" />
