--- a/Src/Canvas/Canvas/Canvas.nuspec
+++ b/Src/Canvas/Canvas/Canvas.nuspec
@@ -15,6 +15,7 @@
       <dependency id="Isas.Ploidy" version="(0.1.0,1.0.0)" />
       <dependency id="Isas.SequencingFiles" version="(3.4.0,4.0.0)" />
       <dependency id="Isas.Framework" version="(4.0.0,5.0.0)" />
+	    <dependency id="Illumina.Common" version="[2.0.0,3.0.0)" />
     </dependencies>
   </metadata>
   <files>
