Multi sample VCF output for SPW

--- a/Src/Canvas/CanvasCommon/CanvasCommon.csproj
+++ b/Src/Canvas/CanvasCommon/CanvasCommon.csproj
@@ -104,6 +104,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CanvasSegment.cs" />
+    <Compile Include="CanvasSegmentWriter.cs" />
     <Compile Include="ClusterInfo.cs" />
     <Compile Include="CommandLineParsing\CoreOptionTypes\DictionaryOption.cs" />
     <Compile Include="CommandLineParsing\CoreOptionTypes\DirectoryOption.cs" />
