--- a/Src/Canvas/CanvasPedigreeCaller/CanvasPedigreeCaller.csproj
+++ b/Src/Canvas/CanvasPedigreeCaller/CanvasPedigreeCaller.csproj
@@ -143,6 +143,10 @@
       <Project>{ec8755f1-74bd-4a1f-9b82-5133d2f6a93b}</Project>
       <Name>CanvasCommon</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Canvas\Canvas.csproj">
+      <Project>{f7eb30ca-eb4a-4e80-a067-0d9498a9f5b6}</Project>
+      <Name>Canvas</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.5.2">
