--- a/Src/Canvas/Canvas/Canvas.csproj
+++ b/Src/Canvas/Canvas/Canvas.csproj
@@ -77,28 +77,28 @@
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Illumina.Common, Version=2.0.1.64, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>packages\Illumina.Common.2.0.1.64\lib\net451\Illumina.Common.dll</HintPath>
+    <Reference Include="Illumina.Common, Version=2.0.5.74, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>packages\Illumina.Common.2.0.5.74\lib\net451\Illumina.Common.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Isas.Framework, Version=5.0.3.70, Culture=neutral, processorArchitecture=AMD64">
       <HintPath>packages\Isas.Framework.5.0.3.70\lib\net451\Isas.Framework.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Isas.Manifests.AmpliconManifest, Version=2.9.0.9, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>packages\Isas.Manifests.2.9.0.9\lib\net451\Isas.Manifests.AmpliconManifest.dll</HintPath>
+    <Reference Include="Isas.Manifests.AmpliconManifest, Version=2.9.0.14, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>packages\Isas.Manifests.2.9.0.14\lib\net451\Isas.Manifests.AmpliconManifest.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Isas.Manifests.ForenSeqManifest, Version=2.9.0.9, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>packages\Isas.Manifests.2.9.0.9\lib\net451\Isas.Manifests.ForenSeqManifest.dll</HintPath>
+    <Reference Include="Isas.Manifests.ForenSeqManifest, Version=2.9.0.14, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>packages\Isas.Manifests.2.9.0.14\lib\net451\Isas.Manifests.ForenSeqManifest.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Isas.Manifests.NexteraManifest, Version=2.9.0.9, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>packages\Isas.Manifests.2.9.0.9\lib\net451\Isas.Manifests.NexteraManifest.dll</HintPath>
+    <Reference Include="Isas.Manifests.NexteraManifest, Version=2.9.0.14, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>packages\Isas.Manifests.2.9.0.14\lib\net451\Isas.Manifests.NexteraManifest.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Isas.SequencingFiles, Version=0.0.0.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>packages\Isas.SequencingFiles.3.7.0.121\lib\net451\Isas.SequencingFiles.dll</HintPath>
+      <HintPath>packages\Isas.SequencingFiles.3.7.2-O00144XmlWriterSetti\lib\net451\Isas.SequencingFiles.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="NDesk.Options, Version=0.2.1.0, Culture=neutral, processorArchitecture=MSIL">
@@ -198,12 +198,12 @@ if ERRORLEVEL 1 (
     exit /b 1
 )</PostBuildEvent>
   </PropertyGroup>
-  <Import Project="packages\Isas.FileCompression.3.7.0.121\build\net451\Isas.FileCompression.targets" Condition="Exists('packages\Isas.FileCompression.3.7.0.121\build\net451\Isas.FileCompression.targets')" />
+  <Import Project="packages\Isas.FileCompression.3.7.2-O00144XmlWriterSetti\build\net451\Isas.FileCompression.targets" Condition="Exists('packages\Isas.FileCompression.3.7.2-O00144XmlWriterSetti\build\net451\Isas.FileCompression.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
-    <Error Condition="!Exists('packages\Isas.FileCompression.3.7.0.121\build\net451\Isas.FileCompression.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\Isas.FileCompression.3.7.0.121\build\net451\Isas.FileCompression.targets'))" />
+    <Error Condition="!Exists('packages\Isas.FileCompression.3.7.2-O00144XmlWriterSetti\build\net451\Isas.FileCompression.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\Isas.FileCompression.3.7.2-O00144XmlWriterSetti\build\net451\Isas.FileCompression.targets'))" />
   </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
