--- a/Src/Canvas/CanvasSmooth/packages.config
+++ b/Src/Canvas/CanvasSmooth/packages.config
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Illumina.Common" version="2.0.1.64" targetFramework="net452" />
-  <package id="Isas.FileCompression" version="3.7.0.121" targetFramework="net452" />
+  <package id="Illumina.Common" version="2.0.5.74" targetFramework="net452" />
+  <package id="Isas.FileCompression" version="3.7.2-O00144XmlWriterSetti" targetFramework="net452" />
   <package id="Isas.Framework" version="5.0.3.70" targetFramework="net452" />
-  <package id="Isas.SequencingFiles" version="3.7.0.121" targetFramework="net452" />
+  <package id="Isas.SequencingFiles" version="3.7.2-O00144XmlWriterSetti" targetFramework="net452" />
   <package id="NDesk.Options" version="0.2.1" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
   <package id="protobuf-net" version="2.1.0" targetFramework="net452" />
