--- a/Src/Canvas/CanvasDiploidCaller/project.json
+++ b/Src/Canvas/CanvasDiploidCaller/project.json
@@ -5,13 +5,13 @@
   },
 
   "dependencies": {
-    "Illumina.Common": "2.0.5.74",
     "Isas.Framework": "5.0.3.70",
     "Isas.SequencingFiles": "3.7.3.152",
     "Microsoft.NETCore.App": {
       "type": "platform",
       "version": "1.0.1"
-    }
+    },
+    "NDesk.Options": "2.0.5-O00077Options"
   },
 
   "frameworks": {
