--- a/Src/Canvas/CanvasCommon/project.json
+++ b/Src/Canvas/CanvasCommon/project.json
@@ -1,9 +1,17 @@
 {
   "version": "1.0.0-*",
+  "buildOptions": {
+    "copyToOutput": {
+      "mappings": {
+        "QualityScoreParameters.json": "CanvasCommon.net45/QualityScoreParameters.json",
+      }
+    }
+  },
 
   "dependencies": {
+    "Combinatorics": "1.0.0-*",
     "Isas.Framework": "5.0.3.70",
-    "Isas.SequencingFiles": "3.7.3.152",
+    "Isas.SequencingFiles": "3.7.3-O00153FixFileCompres",
     "MathNet.Numerics.Core": "3.17.0",
     "NDesk.Options": "2.0.5-O00077Options",
     "NETStandard.Library": "1.6.0"
