--- a/Src/Canvas/Wrapper/packages.config
+++ b/Src/Canvas/Wrapper/packages.config
@@ -2,11 +2,11 @@
 <packages>
   <package id="ClassicBioinfoTools" version="0.0.1.21" targetFramework="net451" />
   <package id="Illumina.Common" version="2.0.5.74" targetFramework="net451" />
-  <package id="Isas.FileCompression" version="3.7.3.152" targetFramework="net451" />
+  <package id="Isas.FileCompression" version="3.7.3-O00153FixFileCompres" targetFramework="net451" />
   <package id="Isas.Framework" version="5.0.3.70" targetFramework="net451" />
   <package id="Isas.Manifests" version="2.9.0.14" targetFramework="net451" />
   <package id="Isas.Ploidy" version="1.0.2.20" targetFramework="net451" />
-  <package id="Isas.SequencingFiles" version="3.7.3.152" targetFramework="net451" />
+  <package id="Isas.SequencingFiles" version="3.7.3-O00153FixFileCompres" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net451" />
   <package id="protobuf-net" version="2.1.0" targetFramework="net451" />
 </packages>
